added most CRUD functionality of v1 without styles

--- a/src/styles/AddPool.scss
+++ b/src/styles/AddPool.scss
@@ -1,16 +1,17 @@
 .add-pool-container {
     display: flex;
     flex-direction: column;
+    font-size: 1.6rem;
     label {
-        font-size: 1.6rem;
         &:first-child {
             margin-top: 2rem;
         }
     }
     input {
         width: 50%;
-        margin: 2rem auto;
+        margin: 2rem 25%;
         font-size: 1.6rem;
+
     }
     select {
         width: 50%;
@@ -18,7 +19,7 @@
         font-size: 1.6rem;
     }
     button {
-        width: 35%;
+        width: 25%;
         margin: 2rem auto;
         font-size: 1.4rem;
         height: 2.4rem;
