--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,8 @@
 @import'./Nav.scss';
 @import'./AddPool.scss';
 @import'./CalculateGallonage';
+@import'./Dashboard';
+@import'./Pool.scss';
+@import'./AddReading.scss';
+@import'./Login.scss';
+@import'./Register.scss';
