--- a/src/styles/CalculateGallonage.scss
+++ b/src/styles/CalculateGallonage.scss
@@ -11,6 +11,19 @@
         background-color: white;
         margin-top: 50%;
         border: 4px solid;
+        .close-button {
+            display: flex;
+            justify-content: flex-end;
+            button {
+                margin: 1rem;
+                width: 3rem;
+                height: 3rem;
+                border-radius: 1.5rem;
+                border: none;
+                color: white;
+                background-color: red;
+            }
+        }
     }
 }
 
