styled auth components

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
-  max-width: 400px;
+  width: 20vw;
+  min-width: 375px;
   margin: 0 auto;
   background-color: #EEEEEE;
   height: 100vh;
+  // max-height: 575px;
 }
