--- a/src/styles/Dashboard.scss
+++ b/src/styles/Dashboard.scss
@@ -1,10 +1,39 @@
-.Dashboard {
+.dashboard-container {
     font-size: 1.6rem;
+    height: 80%;
+    a {
+        text-decoration: none;
+    }
     h1 {
         font-size: 2.4rem;
-        margin: 2rem auto;
+        // margin: 2rem auto;
     }
-    .pool-link-container {
-        margin: 1rem auto;
+    .pool-links-container {
+        .pool-link-container {
+            height: 10rem;
+            width: 90%;
+            margin: 1rem auto;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            svg {
+                height: 5rem;
+                width: 5rem;
+                color: #1974D2;
+            }
+            .pool-link-info-container {
+                p {
+                    font-size: 1rem;
+                    margin: 1rem 0;
+                    &:nth-of-type(1) {
+                        font-size: 1.8rem;
+                    }
+                }
+            }
+        }
+    }
+    .add-new-pool {
+        color: green;
+        text-decoration: underline;
     }
 }
