styled pool overview component

--- a/src/styles/Dashboard.scss
+++ b/src/styles/Dashboard.scss
@@ -33,7 +33,7 @@
         }
     }
     .add-new-pool {
-        color: green;
+        color: #1974D2;
         text-decoration: underline;
     }
 }
