--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -2,8 +2,8 @@
     height: 10%;
     font-size: 1.6rem;
     display: flex;
-    justify-content: flex-end;
-    align-content: center;
+    justify-content: space-between;
+    align-items: center;
     svg {
         height: 3rem;
         width: 3rem;
