completed calendar view, updated private route, and continued styling components

--- a/src/styles/AddReading.scss
+++ b/src/styles/AddReading.scss
@@ -1,6 +1,6 @@
-.AddReading {
+.add-reading-container {
     font-size: 1.6rem;
-    margin-top: 2rem;
+    height: 80%;
     input {
         width: 50%;
         font-size: 1.6rem;
