--- a/src/styles/Pool.scss
+++ b/src/styles/Pool.scss
@@ -1,6 +1,8 @@
 .pool-container {
     font-size: 1.6rem;
     height: 80%;
+    // temporary until nav and footer properly positioned
+    overflow-y: overlay;
     .pool-card-container {
         width: 90%;
         margin: 0 auto;
