linked calendar and created reading score display

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,7 +5,8 @@
   margin: 0 auto;
   background-color: #EEEEEE;
   height: 100vh;
-  // max-height: 575px;
+  max-height: 812px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   abbr {
     text-decoration: none;
   }
