--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,3 +12,5 @@
 @import'./Footer.scss';
 @import'./WeatherWidget.scss';
 @import'./Calendar.scss';
+@import'./Reading.scss';
+@import'./SelectPool.scss';
