--- a/src/styles/AddReading.scss
+++ b/src/styles/AddReading.scss
@@ -1,16 +1,28 @@
 .add-reading-container {
-    font-size: 1.6rem;
     height: 80%;
-    input {
-        width: 50%;
-        font-size: 1.6rem;
-        margin: 0 25% 2rem 25%;
+    h2 {
+        font-size: 2.4rem;
+        margin: 2rem 0 1rem 0;
     }
-    button {
-        font-size: 1.4rem;
-        margin: 2rem auto;
-        height: 2.4rem;
-        width: 25%;
-        border-radius: 1.2rem;
+    p {
+        font-size: 1.2rem;
+    }
+    form {
+        .reading-form-input {
+            width: 74%;
+            margin: 2rem 13%;
+            label {
+                font-size: 1.4rem;
+            }
+            input {
+                font-size: 1.8rem;
+            }
+        }
+        .form-button {
+            background-color: #1974D2;
+            color: white;
+            margin: 2rem 25%;
+            font-size: 1.4rem;
+        }
     }
 }
