--- a/src/styles/AddReading.scss
+++ b/src/styles/AddReading.scss
@@ -2,7 +2,7 @@
     height: 80%;
     h2 {
         font-size: 2.4rem;
-        margin: 2rem 0 1rem 0;
+        padding: 2rem 0 1rem 0;
     }
     p {
         font-size: 1.2rem;
