--- a/src/styles/AddPool.scss
+++ b/src/styles/AddPool.scss
@@ -2,27 +2,58 @@
     display: flex;
     flex-direction: column;
     font-size: 1.6rem;
-    label {
-        &:first-child {
-            margin-top: 2rem;
+    height: 80%;
+    form {
+        .pool-form-input {
+            width: 74%;
+            margin: 2rem 13%;
+            label {
+                font-size: 1.4rem;
+            }
+            input {
+                font-size: 1.8rem;
+            }
+        }
+        .select-sanitizer {
+            width: 37%;
+            margin-bottom: 1.5rem;
+            .MuiOutlinedInput-root {
+                height: 5rem;
+            }
+            label {
+                font-size: 1.4rem;
+            }
+            .material-select div {
+                height: 1.4rem;
+                font-size: 1.4rem;
+            }
+            .MuiSelect-iconOutlined {
+                top: 18px;
+            }
+            .dropdown-content li > span {
+                font-size: 14px;
+            }
+        }
+        .form-button {
+            background-color: #1974D2;
+            color: white;
+            margin: 2rem 25%;
+            font-size: 1.4rem;
+        }
+        .set-modal {
+            font-size: 1.2rem;
         }
     }
-    input {
-        width: 50%;
-        margin: 2rem 25%;
-        font-size: 1.6rem;
+}
 
-    }
-    select {
-        width: 50%;
-        margin: 2rem auto;
-        font-size: 1.6rem;
-    }
-    button {
-        width: 25%;
-        margin: 2rem auto;
-        font-size: 1.4rem;
-        height: 2.4rem;
-        border-radius: 1.2rem;
+.MuiPopover-root {
+    .MuiPaper-root {
+        ul {
+            option {
+                font-size: 1.4rem;
+                font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+                margin: .5rem 0;
+            }
+        }
     }
 }
