--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,6 +7,13 @@
   height: 100vh;
   max-height: 812px;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  // uncomment for mobile-mock
+  // border-top: 40px solid;
+  // border-left: 5px solid;
+  // border-right: 5px solid;
+  // border-bottom: 80px solid;
+  // border-color: black;
+  // border-radius: 10px;
   abbr {
     text-decoration: none;
   }
