--- a/src/styles/CalculateGallonage.scss
+++ b/src/styles/CalculateGallonage.scss
@@ -2,15 +2,16 @@
     position: fixed;
     background: rgba(0, 0, 0, 0.6);
     height: 100%;
-    width: 100%;
-    max-width: 400px;
+    width: 20vw;
+    min-width: 375px;
     top: 0;
     form {
         display: flex;
         flex-direction: column;
         background-color: white;
-        margin-top: 50%;
-        border: 4px solid;
+        width: calc(100% - 8px);
+        margin: 50% auto 0 auto;
+        outline: auto;
         .close-button {
             display: flex;
             justify-content: flex-end;
