--- a/src/styles/AddPool.scss
+++ b/src/styles/AddPool.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     font-size: 1.6rem;
     height: 80%;
+    h2 {
+        font-size: 2.4rem;
+        padding: 2rem 0 1rem 0;
+    }
     form {
         .pool-form-input {
             width: 74%;
