added zipcode to user and connected to weather api

--- a/src/styles/WeatherWidget.scss
+++ b/src/styles/WeatherWidget.scss
@@ -7,9 +7,10 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    svg {
-        height: 3rem;
-        width: 3rem;
+    img {
+        height: 6rem;
+        width: 6rem;
+        margin-left: -1.5rem;
     }
     h3 {
         font-size: 1.6rem;
